in their filtered state. Performance-related code simplifications made
this behavior difficult to maintain. Long term this would be
easier to implement with a cache_self component <%flag>.
- ** All compiler properties are now read-only. If you need to change
compiler properties on a per-request basis, you'll need to create
multiple compiler and interpreter objects.
- ** The current_time method, deprecated in 1.1x, has been removed.
- ** The behaviors of $m->flush_buffer and $m->clear_buffer have been
simplified. $m->flush_buffer only acts on the top-level output buffer;
$m->clear_buffer clears all output buffers. Task id #554.

[ ENHANCEMENTS ]

- Significantly improved performance in component execution,
especially in static_source mode.
- Added a plugin architecture. Plugin classes can perform actions at
key points, e.g. before and after each request and each component
call.  See HTML::Mason::Plugin for documentation.
- Added the ability to change component root(s) on the fly if the
dynamic_comp_root parameter is turned on.
- Added static_source_touch_file, making it much easier to update
a server running in static_source mode.
- Added enable_autoflush parameter. When turned off, Mason can
compile components to a more efficient form.
- Moved the notion of component roots (single and multiple) from the
Resolver to the Interpreter. This improved the performance of multiple
component roots in conjunction with static source mode. Any resolver,
file-based or otherwise, can benefit from component root settings or
choose to ignore them.
- Added the compiler object_id to the object file path, so that
multiple versions of Mason do not collide in the same object
directory. Task #569.
- Added .obj (or a configurable extension) to object filenames.
Task #152.
- Added an official comment syntax, <% # ... %>, and documented
the various comment markers in the developer's manual. Task id #566.
- Added buffer_preallocate_size parameter, which allows you to